# utvm_staticrt_codegen

examples/: gen_nms_graph_and_params.py  gen_scatter_add_graph_and_params.py  gen_topk_graph_and_params.py  run_flow.sh  run_flow_nms.sh  run_flow_scatadd.sh  run_flow_topk.sh  utvm_gen_graph_and_params.py
examples/out_nms/: nms.graph  nms.ll  nms.params  nms.s  staticrt.c
examples/target_src/: CMakeLists.txt
examples/target_src_nms/: CMakeLists.txt  main.c
examples/target_src_nms/build_rvp/: CMakeCache.txt  Makefile  cmake_install.cmake  example_target_src  pk  run.sh  spike
examples/target_src_scatadd/: CMakeLists.txt  main.c
examples/target_src_topk/: CMakeLists.txt
